src/styles/singleMoviePage.css
.single-movie-wrapper {
    background-size: cover;
    background-position: 50%;
    background-repeat: no-repeat;
    max-width: 80em;
    height: 58vh;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px solid darkgray;
    border-radius: 5px;
    margin: auto;
    padding: .5em;
    margin-bottom: 10px;
}

.carousel {
    color: black;
    text-align: center;
    max-width: 80em;
    height: auto;
    padding: 5px;
    margin: 0 auto;
    border: 2px solid darkgray;
    border-radius: 5px;
    margin-bottom: 10px;
    background: url('../images/floor-tile.png')
}
.actor-div {
    display: flex;
    flex-direction: column;
    object-fit: contain;
    text-align: center;
    height: auto;
    margin: 5px;
    margin-bottom: -5px;
    color: black;
}

.actor-div-error {
    display: flex;
    flex-direction: column;
    
}


.actor-div img {
    border-radius: 5px;
    border: 2px solid rgb(56, 53, 53);
    margin-bottom: 5px;
}

.singlepage-title {
    text-align: left;
}
.page-wrapper {
    border: none;

}
ul {
    list-style-type: none; /* Remove bullets */
    padding: 0; /* Remove padding */
    margin: 0; /* Remove margins */
    margin-bottom: .2em;
}

.poster {
    height: 40vh;
    border-radius: 3px;
}

.inner-movie-div {
    display: flex;
    align-items: center;
    margin-left: 6em;
}
.movie-overview {
    padding: 3em;
    justify-content: center;
    max-height: 60vh;
    max-width: 80%;
}

.movie-poster {
    justify-content: center;
}

.bottom-btns {
    padding: 5px 20px;
    font-size: 1em;
    border: none;
    border-radius: 20px;
    background-color: rgb(255, 85, 85);
    color: white;
}

.bottom-btns:hover {
    background-color: rgb(225, 85, 85);
    transition: 0.2s
}

@media screen and (min-width: 900px) {
    .bottom-movie-overview {
        display: none;
    }
}

@media screen and (max-width: 900px) {

    .page-wrapper {
        border: 2px solid white;
        border-radius: 5px;
        padding: .5em;
    }
    .inner-movie-div {
        margin: auto;
    }
    .poster {
        margin-left: auto;
        margin-right: auto;
        display: block;
    }
    .movie-overview {
        display: none;
    }

    .bottom-movie-overview {
        border: 2px solid darkgray;
        border-radius: 5px;
        background: url('../images/floor-tile.png');
        padding: .5em;
        color: black;
        margin-top: .5em;
    }

    .bottom-movie-overview h3 { 
        margin-bottom: 3px;
    }

    .bottom-movie-overview li { 
        margin-top: 3px;
    }


    .carousel {
        margin-top: 10px;
    }
}

